# streamvault

./: .gitignore  Cargo.toml  LICENSE  README.MD  install.sh
src/: lib.rs  main.rs
src/api/: youtube.rs
src/functions/: sanitize.rs
src/services/: chat.rs  database.rs  discord.rs  mod.rs  recorder.rs
