[package]
name = "streamvault"
version = "0.1.0"
edition = "2021"
authors = ["Hunter hayes <hunterhayesofficial@protonmail.com>"]
description = "A Rust application that records YouTube live streams and downloads chat logs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = "0.4"
dirs = "5.0"
rusqlite = { version = "0.29", features = ["bundled"] }
regex = "1.8"